@@ -1,0 +1,123 @@
+#!/bin/sh
+#
+# Settings for the TraumLand mud
+#
+# configure will strip this part from the script.
+
+exec ./configure --prefix=/TL --libdir=/TL/mudlib --bindir=/TL/bin --with-setting=traumland $*
+exit 1
+
+
+# --- Runtime limits ---
+
+with_max_array_size=0x1000
+with_max_mapping_size=0x1000
+with_read_file_max_size=50000
+with_max_byte_transfer=50000
+with_max_callouts=500
+
+# --- Timing ---
+
+with_time_to_clean_up=7200
+with_time_to_swap=900
+with_time_to_swap_variables=0
+with_time_to_reset=3600
+
+
+# --- Memory ---
+
+with_malloc=smalloc
+with_reserved_user_size=0x1000000
+with_reserved_master_size=0x100000
+with_reserved_system_size=0x400000
+with_max_malloced=0x10000000 
+with_min_malloced=0x1000000
+with_min_small_malloced=0x400000
+
+
+# --- Interpreter ---
+
+enable_strict_euids=yes
+with_max_cost=250000
+
+
+# --- Communication ---
+
+with_input_escape="!"
+with_portno=4711
+with_udp_port=4712
+with_maxnumports=20
+enable_erq=no
+with_erq_max_reply=1024 
+with_erq_max_send=1024 
+enable_use_ipv6=no
+
+
+#----------- Compilation Options ----------
+
+enable_compat_mode=no
+with_master_name=secure/master
+enable_malloc_trace=no
+enable_malloc_lpc_trace=no
+enable_trace_code=yes
+with_total_trace_length=0x1000
+enable_comm_stat=yes
+enable_apply_cache_stat=yes
+with_swap_file=LP_SWAP.3
+
+
+# --- Wizlist ---
+
+with_wizlist_file=WIZLIST
+
+
+# --- Access Control ---
+
+enable_access_control=yes
+with_access_file=secure/ACCESS.ALLOW
+enable_access_log=yes
+with_access_log=log/sys/access/access.allow.log
+
+
+# --- Language ---
+
+enable_supply_parse_command=no
+enable_initialization_by___init=yes
+enable_use_system_crypt=yes
+enable_lpc_nosave=yes
+enable_use_mysql=no
+enable_use_alists=no
+enable_use_pcre=yes
+enable_use_deprecated=no
+
+
+# --- Runtime limits ---
+
+with_set_buffer_size_max=65536 
+with_catch_reserved_cost=0x10000
+with_master_reserved_cost=0x4000
+enable_dynamic_costs=yes
+with_evaluator_stack_size=0x2000
+with_max_user_trace=100
+with_max_trace=120
+with_max_bits=0x1000
+with_max_players=500
+with_allowed_ed_cmds=20
+
+
+# --- Compiler ---
+
+with_compiler_stack_size=0x400
+with_max_local=50
+with_defmax=65000
+enable_align_functions=yes
+
+
+# --- Internal Tables ---
+
+with_htable_size=0x10000
+with_otable_size=0x8000
+with_itable_size=0x1000
+with_apply_cache_bits=14
+enable_rxcache_table=yes
+with_rxcache_table=0x2000
