@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+20-Dec-2002 (Lars Duening)  (3.3.337)
+  - (actions.c) Throw an error if H_NOTIFY_FAIL hook is missing. This also
+      prevents the driver from crashing if the H_SEND_NOTIFY hook is
+      defined (reported by Zonk).
+
 18-Dec-2002 (Lars Duening)  (3.3.336)
   - (xalloc.c) The max_malloced tracing forgot to count down the allocated
       size on xfree()s (reported by Dafire).
